--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(236, 236, 236);
-    min-height: 100vh;
+    min-height:100vh
 }
 
 nav{
@@ -8,6 +8,9 @@ nav{
     z-index: 2;
     position: relative;
     .profile{
+        display: none;
+    }
+    .current-text{
         display: none;
     }
 }
@@ -41,6 +44,15 @@ nav{
             border-radius: 100px;
             transform: translate(-5%,-50%);
         }
+        .current-text{
+            display: flex;
+            position: absolute;
+            font-size: 25px;
+            left: 35%;
+            color: black;
+            font-weight: bolder;
+            top: 25%;
+        }
     }
 
     .line{
@@ -69,14 +81,17 @@ nav{
         justify-content: flex-start;
         clip-path: circle(25px at 89% 5%);
         transition: all 1s ease;
-        // -webkit-clip-path:circle(100px at 100% -10%);
+        -webkit-clip-path:circle(25px at 89% 5%);
         li{
             padding: 20% 0;
+            font-weight: bolder;
+            color: white;
         }
     }
 
     .nav-links.open{
         background-color: rgb(131, 129, 129);
         clip-path: circle(900px at 90% 0%);
+        -webkit-clip-path:circle(900px at 90% 0%);
     }
 }
