--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -6,6 +6,7 @@
 .item-details{
     margin-top: 10%;
     position: relative;
+    min-height: 70vh;
     width: 95%;
     background-color: rgb(255, 255, 255);
     padding: 2%;
@@ -43,13 +44,33 @@
             }
         }
     }
-    .button{
+    .button,.admin-action{
         position: absolute;
-        background-color: rgb(255, 116, 66);
         bottom: 2%;
         width: 95%;
         color: white;
         font-weight: bolder;
+    }
+
+    .admin-action{
+        display: flex;
+        flex-direction: column;
+        button{
+            margin: 2px 0;
+            border: none;
+            padding: 5px 0;
+        }
+        
+    }
+    .add{
+        background-color: rgb(255, 116, 66);
+    }
+
+    .remove{
+        background-color: rgb(255, 66, 66);
+    }
+    .edit{
+        background-color: rgb(82, 255, 66); 
     }
 }
 
