--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -1,94 +1,95 @@
-.wrap-details{
-    display: flex;
-    justify-content: center;
+.wrap-details {
+  display: flex;
+  justify-content: center;
 }
 
-.item-details{
-    margin-top: 10%;
+.item-details {
+  margin-top: 10%;
+  position: relative;
+  min-height: 70vh;
+  width: 95%;
+  background-color: rgb(255, 255, 255);
+  padding: 2%;
+  border-radius: 10px;
+  .image {
     position: relative;
-    min-height: 70vh;
-    width: 95%;
-    background-color: rgb(255, 255, 255);
-    padding: 2%;
-    border-radius: 10px;
-    .image{
-        position: relative;
-        .basic-info{
-            position: absolute;
-            bottom: 2%;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 5%;
+    .basic-info {
+      position: absolute;
+      bottom: 2%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 5%;
 
-            .price{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-weight: bold;
-            }
-        }
-    }
-
-    .full-info{
-        padding-bottom: 10%;
-        div{
-            margin: 5%;
-            h4{
-                font-weight: bold;
-                padding: 5px;
-            }
-            p{
-                padding: 5px;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            }
-        }
-    }
-    .button,.admin-action{
-        position: absolute;
-        bottom: 2%;
-        width: 95%;
-        color: white;
-        font-weight: bolder;
-    }
-
-    .admin-action{
+      .price {
         display: flex;
-        flex-direction: column;
-        button{
-            margin: 2px 0;
-            border: none;
-            padding: 5px 0;
-        }
-        
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+      }
     }
-    .add{
-        background-color: rgb(255, 116, 66);
-    }
+  }
 
-    .remove{
-        background-color: rgb(255, 66, 66);
+  .full-info {
+    padding-bottom: 10%;
+    div {
+      margin: 5%;
+      h4 {
+        font-weight: bold;
+        padding: 5px;
+      }
+      p {
+        padding: 5px;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      }
     }
-    .edit{
-        background-color: rgb(82, 255, 66); 
-    }
-}
+  }
+  .button,
+  .admin-action {
+    position: absolute;
+    bottom: 2%;
+    width: 95%;
+    color: white;
+    font-weight: bolder;
+  }
 
-.user-image{
-    width: 60%;
+  .admin-action {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    h4{
-        font-weight: bolder;
+    flex-direction: column;
+    button {
+      margin: 2px 0;
+      border: none;
+      padding: 5px 0;
     }
+  }
+  .add {
+    background-color: rgb(255, 116, 66);
+  }
+
+  .remove {
+    background-color: rgb(255, 66, 66);
+  }
+  .edit {
+    background-color: rgb(82, 255, 66);
+  }
 }
 
-.thumb{
-    width: 60px;
-    height: 60px;
-    border-radius: 100px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100% 100%
+.user-image {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  h4 {
+    font-weight: bolder;
+  }
+}
+
+.thumb {
+  width: 60px;
+  height: 60px;
+  border-radius: 100px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
 }
