--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,16 +1,16 @@
-.wrap{
-    display:flex;
-    justify-content:center;
-    align-items:center
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.login-form{
-    width: 80%;
-    height:80%;
-    background-color:white;
-    text-align: center;
-    margin: 10% 0;
-    padding:10%;
-    h4{
-        padding: 5% 0%;
-    }
+.login-form {
+  width: 80%;
+  height: 80%;
+  background-color: white;
+  text-align: center;
+  margin: 10% 0;
+  padding: 10%;
+  h4 {
+    padding: 5% 0%;
+  }
 }
