--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,97 +1,96 @@
-body{
-    background-color: rgb(236, 236, 236);
-    min-height:100vh
+body {
+  background-color: rgb(236, 236, 236);
+  min-height: 100vh;
 }
 
-nav{
-    height: 10vh;
+nav {
+  height: 10vh;
+  z-index: 2;
+  position: relative;
+  .profile {
+    display: none;
+  }
+  .current-text {
+    display: none;
+  }
+}
+
+.nav-links {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: auto;
+  li a {
+    text-decoration: none;
+    color: white;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav {
+    .profile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      cursor: pointer;
+      left: 5%;
+      top: 50%;
+      width: 40px;
+      height: 40px;
+      border-radius: 100px;
+      transform: translate(-5%, -50%);
+    }
+    .current-text {
+      display: flex;
+      position: absolute;
+      font-size: 25px;
+      left: 35%;
+      color: black;
+      font-weight: bolder;
+      top: 25%;
+    }
+  }
+
+  .line {
+    height: 3px;
+    width: 30px;
+    margin: 5px;
+    background: white;
+  }
+
+  .hamburger {
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 50%;
+    background-color: rgb(131, 129, 129);
+    border-radius: 100%;
+    padding: 5px 0;
+    transform: translate(-5%, -50%);
     z-index: 2;
-    position: relative;
-    .profile{
-        display: none;
+  }
+  .nav-links {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    clip-path: circle(25px at 89% 5%);
+    transition: all 1s ease;
+    -webkit-clip-path: circle(25px at 89% 5%);
+    li {
+      padding: 20% 0;
+      font-weight: bolder;
+      color: white;
     }
-    .current-text{
-        display: none;
-    }
-}
+  }
 
-.nav-links{
-    display: flex;
-    width: 50%;
-    height: 100%;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: auto;
-    li a{
-        text-decoration: none;
-        color: white;
-    }
-}
-
-@media screen and (max-width:768px){
-
-    nav{
-        .profile{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            cursor: pointer;
-            left: 5%;
-            top: 50%;
-            width: 40px;
-            height: 40px;
-            border-radius: 100px;
-            transform: translate(-5%,-50%);
-        }
-        .current-text{
-            display: flex;
-            position: absolute;
-            font-size: 25px;
-            left: 35%;
-            color: black;
-            font-weight: bolder;
-            top: 25%;
-        }
-    }
-
-    .line{
-        height: 3px;
-        width: 30px;
-        margin: 5px;
-        background: white;
-    }
-
-    .hamburger{
-        position: absolute;
-        cursor: pointer;
-        right: 5%;
-        top: 50%;
-        background-color: rgb(131, 129, 129);
-        border-radius: 100%;
-        padding: 5px 0;
-        transform: translate(-5%,-50%);
-        z-index: 2;
-    }
-    .nav-links{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        flex-direction: column;
-        justify-content: flex-start;
-        clip-path: circle(25px at 89% 5%);
-        transition: all 1s ease;
-        -webkit-clip-path:circle(25px at 89% 5%);
-        li{
-            padding: 20% 0;
-            font-weight: bolder;
-            color: white;
-        }
-    }
-
-    .nav-links.open{
-        background-color: rgb(131, 129, 129);
-        clip-path: circle(900px at 90% 0%);
-        -webkit-clip-path:circle(900px at 90% 0%);
-    }
+  .nav-links.open {
+    background-color: rgb(131, 129, 129);
+    clip-path: circle(900px at 90% 0%);
+    -webkit-clip-path: circle(900px at 90% 0%);
+  }
 }
