--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -24,13 +24,13 @@
 }
 
 .shadow {
-    -webkit-box-shadow: 0px 0px 12px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 12px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 12px -1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
 }
-.chart{
-    margin: 20px auto;
-    width: 100%;
-    padding: 5px;
-    border-radius: 20px;
+.chart {
+  margin: 20px auto;
+  width: 100%;
+  padding: 5px;
+  border-radius: 20px;
 }
