--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
-@import '_nav.scss';
-@import '_preview.scss';
-@import '_details.scss';
-@import '_login.scss';
-@import '_signup.scss';
-@import '_profile.scss';
+@import "_nav.scss";
+@import "_preview.scss";
+@import "_details.scss";
+@import "_login.scss";
+@import "_signup.scss";
+@import "_profile.scss";
