--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -3,6 +3,12 @@ div {
   margin: none;
 }
 
+.welcome{
+  margin-top: 5%;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
 .item-list {
   display: flex;
   align-items: center;
