added more props validation

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -15,7 +15,7 @@
   }
   div {
     margin: 5px;
-    width: 90%;
+    min-width: 30%;;
     display: flex;
     justify-content: space-around;
     padding: 10px;
