added the linters confing

--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -3,9 +3,9 @@ div {
   margin: none;
 }
 
-.welcome{
+.welcome {
   margin-top: 5%;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
 }
 
@@ -37,27 +37,31 @@ div {
   display: flex;
   background-color: white;
   flex-direction: column;
+
   a {
     color: rgb(83, 83, 83);
   }
+
   img {
     height: 70%;
     width: 100%;
   }
+
   .prev-text {
     width: 100%;
     padding: 2% 5%;
     margin-top: -10px;
     height: 30%;
-    margin: auto;
     display: flex;
     flex-direction: column;
+
     div {
       display: flex;
       font-weight: bolder;
       margin: 5px;
       justify-content: space-between;
     }
+
     div:nth-child(2) {
       width: 30%;
     }
