--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -3,6 +3,17 @@
   justify-content: center;
 }
 
+.user-image {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  h4 {
+    font-weight: bolder;
+  }
+}
+
 .item-details {
   margin-top: 10%;
   position: relative;
@@ -11,8 +22,10 @@
   background-color: rgb(255, 255, 255);
   padding: 2%;
   border-radius: 10px;
+
   .image {
     position: relative;
+
     .basic-info {
       position: absolute;
       bottom: 2%;
@@ -32,19 +45,31 @@
 
   .full-info {
     padding-bottom: 10%;
+
     div {
       margin: 5%;
+
       h4 {
         font-weight: bold;
         padding: 5px;
       }
+
       p {
         padding: 5px;
-        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        font-family:
+          "Segoe UI",
+          "Roboto",
+          "Oxygen",
+          "Ubuntu",
+          "Cantarell",
+          "Fira Sans",
+          "Droid Sans",
+          "Helvetica Neue",
+          sans-serif;
       }
     }
   }
+
   .button,
   .admin-action {
     position: absolute;
@@ -57,12 +82,14 @@
   .admin-action {
     display: flex;
     flex-direction: column;
+
     button {
       margin: 2px 0;
       border: none;
       padding: 5px 0;
     }
   }
+
   .add {
     background-color: rgb(255, 116, 66);
   }
@@ -70,18 +97,9 @@
   .remove {
     background-color: rgb(255, 66, 66);
   }
+
   .edit {
     background-color: rgb(82, 255, 66);
-  }
-}
-
-.user-image {
-  width: 60%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  h4 {
-    font-weight: bolder;
   }
 }
 
