--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -8,14 +8,16 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+
   img {
     width: 90px;
     height: 90px;
     border-radius: 100%;
   }
+
   div {
     margin: 5px;
-    min-width: 30%;;
+    min-width: 30%;
     display: flex;
     justify-content: space-around;
     padding: 10px;
@@ -24,10 +26,11 @@
 }
 
 .shadow {
-  -webkit-box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.75);
 }
+
 .chart {
   margin: 20px auto;
   width: 100%;
