--- a/src/styles/_spiner.scss
+++ b/src/styles/_spiner.scss
@@ -4,6 +4,7 @@
   top: 40%;
   width: 100%;
 }
+
 .spin {
   width: 200px;
   height: 200px;
@@ -13,6 +14,7 @@
   border-right-color: transparent;
   animation: rotate 2s cubic-bezier(0.26, 1.36, 0.74, -0.29) infinite;
 }
+
 #loader2 {
   border: 3px solid rgb(148, 148, 148);
   width: 220px;
@@ -23,6 +25,7 @@
   border-right-color: transparent;
   animation: rotate2 2s cubic-bezier(0.26, 1.36, 0.74, -0.29) infinite;
 }
+
 #loader3 {
   border: 3px solid rgb(68, 68, 68);
   width: 240px;
@@ -33,6 +36,7 @@
   border-right-color: transparent;
   animation: rotate 2s cubic-bezier(0.26, 1.36, 0.74, -0.29) infinite;
 }
+
 #loader4 {
   border: 3px solid rgb(212, 212, 212);
   width: 260px;
@@ -43,25 +47,30 @@
   border-right-color: transparent;
   animation: rotate2 2s cubic-bezier(0.26, 1.36, 0.74, -0.29) infinite;
 }
+
 @keyframes rotate {
   0% {
-    transform: rotateZ(-360deg)
+    transform: rotateZ(-360deg);
   }
+
   100% {
-    transform: rotateZ(0deg)
+    transform: rotateZ(0deg);
   }
 }
+
 @keyframes rotate2 {
   0% {
-    transform: rotateZ(360deg)
+    transform: rotateZ(360deg);
   }
+
   100% {
-    transform: rotateZ(0deg)
+    transform: rotateZ(0deg);
   }
 }
+
 #text {
   color: rgb(146, 134, 62);
-  font-family: Arial;
+  font-family: fantasy;
   font-size: 15px;
   position: relative;
   top: -857px;
