--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -71,5 +71,5 @@ div {
 .preview:hover {
   transform: scale(1.1);
   margin: 20px;
-  // -webkit-transform: scale(1.1); ;
+  -webkit-transform: scale(1.1); ;
 }
