--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -56,7 +56,7 @@ div {
     div {
       display: flex;
       font-weight: bolder;
-      margin: 2%;
+      margin: 5px;
       justify-content: space-between;
     }
 
