fixe the styles

--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -31,7 +31,7 @@ div {
 .preview {
   min-width: 20rem;
   transition: all 0.5s;
-  height: 20rem;
+  height: 60vh;
   border-radius: 10px;
   margin: 10px;
   display: flex;
