--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -41,9 +41,12 @@ div {
     color: rgb(83, 83, 83);
   }
 
-  img {
+  .img {
     height: 70%;
     width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 
   .prev-text {
