tried to fix the css again

--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -83,6 +83,7 @@
     button {
       margin: 2px 0;
       border: none;
+      margin: auto;
       padding: 5px 0;
       a{
         color: white;
