--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -42,7 +42,7 @@ div {
   }
 
   .img {
-    height: 70%;
+    min-height: 70%;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
