fixed he stylint errors

--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -72,5 +72,5 @@ div {
 .preview:hover {
   transform: scale(1.1);
   margin: 20px;
-  -webkit-transform: scale(1.1); ;
+  -webkit-transform: scale(1.1);
 }
