--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -34,7 +34,6 @@ div {
   height: 60vh;
   border-radius: 10px;
   margin: 10px;
-  background-color: rgba(128, 0, 128, 0.473);
   display: flex;
   flex-direction: column;
 
@@ -43,18 +42,14 @@ div {
   }
 
   .item-img {
-    background-color: royalblue;
-    height: 70%;
+    height: 40vh;
+    width: 100%;
     display: flex;
-    justify-content: center;
 
     .responsive {
+      max-height: 40vh;
       width: 100%;
-      height: auto;
     }
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
   }
 
   .prev-text {
