adjusted the design again

--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -6,7 +6,7 @@ div {
 .welcome {
   margin-top: 5%;
   font-family: "Courier New", Courier, monospace;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 .item-list {
