--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -33,6 +33,7 @@
       display: flex;
       justify-content: space-between;
       padding: 0 5%;
+      color: white;
 
       .price {
         display: flex;
