--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -115,3 +115,10 @@
   background-position: center;
   background-size: 100% 100%;
 }
+
+@media screen and (min-width: 768px) {
+  .wrap-details {
+    width: 60%;
+    margin: auto;
+  }
+}
