--- a/src/styles/_signup.scss
+++ b/src/styles/_signup.scss
@@ -9,10 +9,18 @@
   height: 80%;
   background-color: white;
   text-align: center;
-  margin: 10% 0;
+  margin: 5% 0;
   padding: 10%;
 
   h4 {
     padding: 5% 0%;
+  }
+}
+
+@media screen and(min-width:768px){
+  .signup-form{
+    width: 40%;
+    padding: 5%;
+    margin: 5% 0 ;
   }
 }
