--- a/src/styles/_preview.scss
+++ b/src/styles/_preview.scss
@@ -7,6 +7,8 @@ div {
   margin-top: 5%;
   font-family: "Courier New", Courier, monospace;
   font-weight: bolder;
+  color:rgba(128,144,233,1);
+  font-weight: bolder;
 }
 
 .item-list {
@@ -26,7 +28,7 @@ div {
     font-weight: bold;
     width: 50px;
     height: 50px;
-    background-color: rgba(255, 255, 255, 0.822);
+    background-color:whitesmoke;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,6 +62,7 @@ div {
 
 .preview {
   min-width: 20rem;
+  background-image: linear-gradient( 109.6deg,  rgba(128,144,233,1) 17.4%, rgba(171,88,238,1) 52.4% );
   transition: all 0.5s;
   height: 60vh;
   border-radius: 10px;
@@ -68,7 +71,7 @@ div {
   flex-direction: column;
 
   a {
-    color: rgb(83, 83, 83);
+    color: whitesmoke;
   }
 
   .item-img {
@@ -106,4 +109,7 @@ div {
   transform: scale(1.1);
   margin: 20px;
   -webkit-transform: scale(1.1);
+  a{
+    color: whitesmoke;
+  }
 }
