--- a/src/styles/_signup.scss
+++ b/src/styles/_signup.scss
@@ -7,7 +7,7 @@
 .signup-form {
   width: 80%;
   height: 80%;
-  background-color: white;
+  background-color: whitesmoke;
   text-align: center;
   margin: 5% 0;
   padding: 10%;
