--- a/src/styles/_signup.scss
+++ b/src/styles/_signup.scss
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .signup-form {
-  width: 80%;
-  height: 80%;
+  width: auto;
+  height: auto;
   background-color: white;
   text-align: center;
-  margin: 10% 0;
-  padding: 10%;
+  margin: 2% 0;
+  padding: 5%;
 
   h4 {
     padding: 5% 0%;
