--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,20 +1,32 @@
 .wrap {
   display: flex;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow: hidden;
   align-items: center;
+  background-color: white;
 }
 
-.login-form {
+.reg-form {
   width: auto;
   height: auto;
   background-color: white;
   text-align: center;
   margin: 2% 0;
   padding: 5%;
+  border-radius: 10px;
+
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
 
   h4 {
     padding: 5% 0%;
+  }
+}
+
+@media screen and (max-width:768px){
+  .login-form{
+    width: 80%;
   }
 }
