use one file for both forms

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -22,6 +22,13 @@
 
   h4 {
     padding: 5% 0%;
+    font-family: 'IBM Plex Sans', sans-serif;
+    // font-family: 'Alegreya', serif;
+    font-weight: bolder !important;
+  }
+  .label,input{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: bold !important;
   }
 }
 
