--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,7 @@
 @import "_login.scss";
 @import "_profile.scss";
 @import "_spiner.scss";
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ballet&display=swap');
+
